@@ -1,26 +1,0 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div><%= f.label :first_name %>
-    <%= f.text_field :first_name %>
-  </div>
-
-  <div><%= f.label :last_name %>
-    <%= f.text_field :last_name %>
-  </div>
-
-  <div><%= f.label :email %>
-  <%= f.email_field :email %></div>
-
-  <div><%= f.label :password %>
-  <%= f.password_field :password %></div>
-
-  <div><%= f.label :password_confirmation %>
-  <%= f.password_field :password_confirmation %></div>
-
-  <div><%= f.submit "Sign up", class: 'btn btn-primary' %></div>
-<% end %>
-
-<%= render "links" %>
