@@ -1,5 +1,9 @@
 == 0.3.0
 
+* Enhancements
+  * Use new Contour login attributes on Registration page
+  * Use Contour for User account Confirmations and Unlocks
+
 == 0.2.0
 
 * Enhancements
